--- a/lab4/lab4_3/pageobject/pom.xml
+++ b/lab4/lab4_3/pageobject/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>labs.tqs</groupId>
-    <artifactId>webdriverhello</artifactId>
+    <artifactId>pageobject</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,7 +13,7 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-    <dependencies>
+        <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -54,4 +54,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
